Use UTF_8 Charset and drop ServletException
Remove ServletException from doPost signature and its Javadoc, and replace URLDecoder.decode(..., StandardCharsets.UTF_8.name()) with the Charset overload URLDecoder.decode(..., StandardCharsets.UTF_8). Also remove catches for UnsupportedEncodingException and keep IllegalArgumentException handling with existing sanitization fallback. These changes simplify exception handling and avoid using charset name strings.